# interactive-pca

./: .gitignore  APP_IMPLEMENTATION.md  GETTING_STARTED.md  INDEX.md  LICENSE  MANIFEST.in  MAP_TAB_ADDED.md  PACKAGE_STRUCTURE.md  PLOTS_FIXED.md  README.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  run_sample_app.py  setup.py  test_app_basic.py  test_plots_present.py  test_tabs_working.py
interactive_pca/: __init__.py  app.py  args.py  cli.py  data_loader.py  layouts.py  plots.py  utils.py
interactive_pca/assets/: resize.js
interactive_pca/callbacks/: __init__.py  aesthetics.py  plots.py  selection.py
interactive_pca/components/: __init__.py  aesthetics.py  config.py  hover.py  tables.py
interactive_pca/layouts/: __init__.py
tests/: __init__.py  conftest.py  test_map_tab.py  test_pca_map_layout.py  test_utils.py
